@@ -1,3 +1,6 @@
+HEAD
+	+ Bug fix: add --force to delete old backup sets
+	+ Bug fix: fix restoring of the first file
 1.3.12
 	+ Add page title
 1.3.10
